2007-02-25  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Diego Escalante Urrelo <diego@aureal.com.pe>

	* e-image-chooser.c: (set_image_from_data): don't use a composite
	pixbuf, avoiding some unnecessary clipping (fixes bug #380315)

2007-02-25  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* gnome-about-me.c: (about_me_image_clicked_cb): change default dir for
	the image chooser to $datadir/pixmaps/faces (same as gdm) and add a
	bookmark for ~/Pictures if available (fixes bug #408305)

2007-02-11  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: (about_me_focus_out): fix possible crash

2007-02-07  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: (about_me_destroy),
	(about_me_button_clicked_cb), (about_me_setup_dialog), (main): fix
	various memory leaks

2007-02-07  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* gnome-about-me-password.c: (passdlg_set_auth_state),
	(passdlg_validate_passwords):
	* gnome-about-me.c: (about_me_load_string_field),
	(about_me_setup_dialog): fix build in general, with gcc 2 in particular,
	and also get rid of a few warnings

2007-01-22  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #376079

	Patch by Francisco Javier F. Serrador  <serrador@openshine.com>

	* gnome-about-me-password.c (passdlg_spawn_passwd): make translatable
	strings more generic.

2007-01-08  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #356076

	Patch by Brian Cameron <brian.cameron@sun.com>

	* gnome-about-me.c (about_me_update_photo): fixed compilation on Solaris.

2007-01-06  Hiroyuki Ikezoe <poincare@ikezoe.net>

	Fixes #343584 (patch from Evolution)

	* e-image-chooser.c (set_image_from_data): ref the pixbuf we get to
	not lose it when we close the loader.

	* gnome-about-me.c (about_me_update_photo): ditto.
	
2006-09-15  Matt Keenan <matt.keenan@sun.com>

	Fixes #349079

	* gnome-about-me-password.c (spawn_passwd): don't use stdin, stdout
	and stderr as variable names. Fixes compilation issue on Sun Studio
	compiler.
