@@ -135,6 +135,9 @@ static void
 stop_passwd (PasswordDialog *pdialog);
 
 static void
+child_watch_remove (PasswordDialog *pdialog);
+
+static void
 free_passwd_resources (PasswordDialog *pdialog);
 
 static gboolean
@@ -270,16 +273,32 @@ stop_passwd (PasswordDialog *pdialog)
 	 * If we return this way we can safely kill passwd as it has completed
 	 * its task.
 	 * 
-	 * Maybe we should run free_passwd_resources here first, and not let
-	 * our child watcher do it?
+	 * We must run free_passwd_resources here and not let our child
+	 * watcher do it, since it will access invalid memory after the
+	 * dialog has been closed and cleaned up.
 	 */
 	
 	if (pdialog->backend_pid != -1) {
+		child_watch_remove (pdialog);
 		kill (pdialog->backend_pid, 9);
+		free_passwd_resources (pdialog);
 	}
 	
 	/* Our child_watch_cb should now handle our kill signal,
 	 * run waitpid and call free_passwd_resources appropriately. */
+}
+
+/* Remove the child watcher only */
+static void
+child_watch_remove (PasswordDialog *pdialog)
+{
+	/* Remove IO watcher */
+	if (pdialog->backend_stdout_watch_id != 0) {
+		
+		g_source_remove (pdialog->backend_stdout_watch_id);
+		
+		pdialog->backend_stdout_watch_id = 0;
+	}
 }
 
 /* Clean up passwd resources */
@@ -315,13 +334,7 @@ free_passwd_resources (PasswordDialog *pdialog)
 		pdialog->backend_stdout = NULL;
 	}
 	
-	/* Remove IO watcher */
-	if (pdialog->backend_stdout_watch_id != 0) {
-		
-		g_source_remove (pdialog->backend_stdout_watch_id);
-		
-		pdialog->backend_stdout_watch_id = 0;
-	}
+	child_watch_remove (pdialog);
 	
 	/* Close PID */
 	if (pdialog->backend_pid != -1) {
@@ -1093,5 +1106,6 @@ gnome_about_me_password (GtkWindow *parent)
 	stop_passwd (pdialog);
 	gtk_widget_destroy (wpassdlg);
 	g_queue_free (pdialog->backend_stdin_queue);
+	g_object_unref (dialog);
 	g_free (pdialog);
 }
